- ADD: vasp.size... objects: attribute "keep" determines whether buffer content should be preserved (default = 1)
- CHANGE: buffer reference checks upon all operations enforced (by new CVasp (checked vasp) class)
- FIX: immediate vasps can not have frames > size
- FIX: immediate garbage collection was not triggered in threaded build

0.1.1:
- FIX: bug in resize of immediate buffers
- CHANGE: check (at actual operation!) whether vector exceeds buffer size (GetRVecs, GetCVecs -> corrlen)

0.1.0:
- NEW: vasp.a<, vasp.a>, vasp.a<=, vasp.a>= for absolute comparisons
- CHANGE: clear stored vasp of an object if a "set" message with an invalid vasp is received
- CHANGE: cleaned up the process loops (with thread yield) and fixed a corresponding bug in vasp.peaks/valleys
- CHANGE: warn - but don't stop - on large FFT prime factors
- FIX: vasp.radd and vasp.rpow had wrong argument initialization
- FIX: mixfft is not thread-safe... introduced thread mutex for it
- FIX: vasp.shift: shift argument was modulo frame count... why?

0.0.8:
- CHANGE: vasp.radio got right outlet for non-radio messages
- ADD: thread yield for all simple vasp objects
- CHANGE: vasp.? and vasp.??: made explicit list outlets
- NEW: vasp.window, vasp.*window, vasp.!window, vasp.*!window, vasp.xwindow, vasp.*xwindow
- REMOVE: vasp.bevel, vasp.!bevel... obsolete due to new vasp.window objects
- REMOVE: vasp.noradio (vasp.!radio)... can easily be an abstraction of vasp.radio
- ADD: minimum length parameter for immediate vasps
- NEW: vasp.channel? (vasp.c?), vasp.channel (vasp.c) for set/query of buffer channel
- CHANGE: env - reversed time/value pairs to value/time pairs
- FIX: vasp.! with length arg outputs its reference on bang
- FIX: on set message check for invalid vasps
- FIX: reintroduce test for invalid buffer names (why was it commented out?)
- FIX: fixe several bugs in vasp.offset= and vasp.frames=
- CHANGE: allow size 0 (is default) for immediate vasps

0.0.7: