@@ -2,6 +2,9 @@
 # Copyright (c) 2001-2003 Thomas Grill (xovo@gmx.net)
 #
 
+# your c++ compiler (define only if it's different than g++)
+# CXX=g++
+
 # where are the PD header files? (m_pd.h, m_imp.h, g_canvas.h)
 PDPATH=/usr/local/pd/src
 
