@@ -1,9 +1,9 @@
 # pool - hierarchical storage object for PD and Max/MSP
-# Copyright (c) 2002 Thomas Grill (xovo@gmx.net)
+# Copyright (c) 2002-2003 Thomas Grill (xovo@gmx.net)
 #
 
-# your c++ compiler (normally g++)
-CXX=g++
+# your c++ compiler (define only if it's different than g++)
+# CXX=g++
 
 # where are the PD header files?
 # leave it blank if it is a system directory (like /usr/local/include), 
