@@ -1,5 +1,5 @@
 # VASP - vector assembling signal processor
-# Copyright (c) 2002 Thomas Grill (xovo@gmx.net)
+# Copyright (c) 2002-2003 Thomas Grill (xovo@gmx.net)
 #
 
 # where is PD?
